fix(DashboardView): do not show additional scrollbar for long dashboards
related to OPT-4268

--- a/client/src/components/Dashboards/DashboardView.scss
+++ b/client/src/components/Dashboards/DashboardView.scss
@@ -16,6 +16,8 @@
 
 .DashboardView {
   height: inherit;
+  display: flex;
+  flex-direction: column;
 
   > .content {
     height: calc(100% - 75px);
